--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -46,5 +46,16 @@
   "Home": "الرئيسية",
   "Reset Password": "إعادة تعيين كلمة المرور",
   "Forgot password ?": "هل نسيت كلمة المرور؟",
-  "Choose one way to reset your password!": "اختر طريقة واحدة لإعادة تعيين كلمة المرور الخاصة بك!"
+  "Choose one way to reset your password!": "اختر طريقة واحدة لإعادة تعيين كلمة المرور الخاصة بك!",
+  "Invalid phone number": "رقم هاتف غير صالح",
+  "Search": "بحث",
+  "Confirm": "تأكيد",
+  "Verification code": "رمز التحقق",
+  "Enter the incoming code.": "أدخل الرمز الوارد.",
+  "Enter your code": "أدخل الرمز الخاص بك",
+  "Create New Password": "إنشاء كلمة مرور جديدة",
+  "Strong password include A,a@#4": "تتضمن كلمة المرور القوية A,a@#4 ",
+  "New Password": "كلمة مرور جديدة",
+  "Password Successfully Created 👍": "تم إنشاء كلمة المرور بنجاح 👍",
+  "Your new password has been created successfully!": "تم إنشاء كلمة المرور الجديدة بنجاح!"
 }
