--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -70,5 +70,13 @@
   "Let's Explore": "لنستكشف",
   "Posts": "المنشورات",
   "Chat": "الدردشة",
-  "Profile": "الملف الشخصي"
+  "Profile": "الملف الشخصي",
+  "Search about something here !": "ابحث عن شيء ما هنا !",
+  "See all": "شاهد الكل",
+  "Explore Categories": "استكشف الفئات",
+  "Properties for sale": "عقارات للبيع",
+  "Cars for sale": "سيارات للبيع",
+  "Jobs": "الوظائف",
+  "Read more...": "اقرأ المزيد...",
+  "Read less...": "اقرأ أقل..."
 }
