--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -70,5 +70,13 @@
   "Let's Explore": "Let's Explore",
   "Posts": "Posts",
   "Chat": "Chat",
-  "Profile": "Profile"
+  "Profile": "Profile",
+  "Search about something here !": "Search about something here !",
+  "See all": "See all",
+  "Explore Categories": "Explore Categories",
+  "Properties for sale": "Properties for sale",
+  "Cars for sale": "Cars for sale",
+  "Jobs": "Jobs",
+  "Read more...": "Read more...",
+  "Read less...": "Read less..."
 }
