--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -70,5 +70,13 @@
   "Let's Explore": "Давайте исследовать",
   "Posts": "Посты",
   "Chat": "Чат",
-  "Profile": "Профиль"
+  "Profile": "Профиль",
+  "Search about something here !": "Поищите что-нибудь здесь!",
+  "See all": "Смотреть все",
+  "Explore Categories": "Исследовать категории",
+  "Properties for sale": "Недвижимость на продажу",
+  "Cars for sale": "Автомобили на продажу",
+  "Jobs": "Работа",
+  "Read more...": "Читать дальше...",
+  "Read less...": "Читать дальше..."
 }
