--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -78,5 +78,17 @@
   "Cars for sale": "سيارات للبيع",
   "Jobs": "الوظائف",
   "Read more...": "اقرأ المزيد...",
-  "Read less...": "اقرأ أقل..."
+  "Read less...": "اقرأ أقل...",
+  "Comment here !": "علق هنا !",
+  "Phone": "الهاتف",
+  "Message": "الرسالة",
+  "Verified": "موثق",
+  "Payment Details": "تفاصيل الدفع",
+  "Total Product Price": "إجمالي سعر المنتج",
+  "Real Fees": "الرسوم الحقيقية",
+  "Taxes": "الضرائب",
+  "Total Amount": "المبلغ الإجمالي",
+  "property details": "تفاصيل العقار",
+  "About Property": "نبذة عن العقار",
+  "Contact Seller": "اتصل بالبائع"
 }
