--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -78,5 +78,17 @@
   "Cars for sale": "Cars for sale",
   "Jobs": "Jobs",
   "Read more...": "Read more...",
-  "Read less...": "Read less..."
+  "Read less...": "Read less...",
+  "Comment here !": "Comment here !",
+  "Phone": "Phone",
+  "Message": "Message",
+  "Verified": "Verified",
+  "Payment Details": "Payment Details",
+  "Total Product Price": "Total Product Price",
+  "Real Fees": "Real Fees",
+  "Taxes": "Taxes",
+  "Total Amount": "Total Amount",
+  "property details": "property details",
+  "About Property": "About Property",
+  "Contact Seller": "Contact Seller"
 }
