--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -78,5 +78,17 @@
   "Cars for sale": "Автомобили на продажу",
   "Jobs": "Работа",
   "Read more...": "Читать дальше...",
-  "Read less...": "Читать дальше..."
+  "Read less...": "Читать дальше...",
+  "Comment here !": "Комментировать здесь!",
+  "Phone": "Телефон",
+  "Message": "Сообщение",
+  "Verified": "Проверено",
+  "Payment Details": "Платежные реквизиты",
+  "Total Product Price": "Общая цена продукта",
+  "Real Fees": "Реальные сборы",
+  "Taxes": "Налоги",
+  "Total Amount": "Общая сумма",
+  "property details": "сведения о недвижимости",
+  "About Property": "О недвижимости",
+  "Contact Seller": "Связаться с продавцом"
 }
