--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -90,5 +90,11 @@
   "Total Amount": "المبلغ الإجمالي",
   "property details": "تفاصيل العقار",
   "About Property": "نبذة عن العقار",
-  "Contact Seller": "اتصل بالبائع"
+  "Contact Seller": "اتصل بالبائع",
+  "Specification": "المواصفات",
+  "What’s included?": "ما الذي يتضمنه؟",
+  "Over View": "نظرة عامة",
+  "Reviews": "المراجعات",
+  "Job Description": "تفاصيل الوظيفه",
+  "Requirements": "المتطلبات"
 }
