--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -90,5 +90,11 @@
   "Total Amount": "Total Amount",
   "property details": "property details",
   "About Property": "About Property",
-  "Contact Seller": "Contact Seller"
+  "Contact Seller": "Contact Seller",
+  "Specification": "Specification",
+  "What’s included?": "What’s included?",
+  "Over View": "Over View",
+  "Reviews": "Reviews",
+  "Job Description": "Job Description",
+  "Requirements": "Requirements"
 }
