--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -90,5 +90,11 @@
   "Total Amount": "Общая сумма",
   "property details": "сведения о недвижимости",
   "About Property": "О недвижимости",
-  "Contact Seller": "Связаться с продавцом"
+  "Contact Seller": "Связаться с продавцом",
+  "Specification": "Технические характеристики",
+  "What’s included?": "Что входит в комплект?",
+  "Over View": "Обзор",
+  "Reviews": "Отзывы",
+  "Job Description": "Описание работы",
+  "Requirements": "Требования"
 }
