--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -113,5 +113,10 @@
   "Packeges": "Packeges",
   "Payments": "Payments",
   "Support": "Support",
-  "Privacy & Terms": "Privacy & Terms"
+  "Privacy & Terms": "Privacy & Terms",
+  "Upload CV/Resume": "Upload CV/Resume",
+  "Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.": "Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.",
+  "Upload": "Upload",
+  "Remove file": "Remove file",
+  "Add CV": "Add CV"
 }
