--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -118,5 +118,6 @@
   "Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.": "قم بتحميل الملفات بصيغة PDF حتى 5 ميغابايت. فقط قم بتحميلها مرة واحدة ويمكنك استخدامها في طلبك التالي.",
   "Upload": "التحميل",
   "Remove file": "إزالة الملف",
-  "Add CV": "إضافة سيرة ذاتية"
+  "Add CV": "إضافة سيرة ذاتية",
+  "Type your message": "اكتب رسالتك"
 }
