--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -118,5 +118,6 @@
   "Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.": "Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.",
   "Upload": "Upload",
   "Remove file": "Remove file",
-  "Add CV": "Add CV"
+  "Add CV": "Add CV",
+  "Type your message": "Type your message"
 }
