--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -118,5 +118,6 @@
   "Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.": "Загружайте файлы в формате PDF размером до 5 МБ. Достаточно загрузить его один раз, и вы сможете использовать его в следующем приложении.",
   "Upload": "Загрузить",
   "Remove file": "Удалить файл",
-  "Add CV": "Добавить резюме"
+  "Add CV": "Добавить резюме",
+  "Type your message": "Напечатайте свое сообщение"
 }
