--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -138,5 +138,8 @@
   "Enter Company Size": "أدخل حجم الشركة",
   "Company Size": "حجم الشركة",
   "Company logo": "شعار الشركة",
-  "Please enter your company logo": "يُرجى إدخال شعار شركتك"
+  "Please enter your company logo": "يُرجى إدخال شعار شركتك",
+  "Page Not Found": "لم يتم العثور على الصفحة",
+  "We Apologize For The Inconvenience": "نحن نعتذر عن الإزعاج",
+  "Reload Again": "إعادة التحميل مرة أخرى"
 }
