--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -138,5 +138,8 @@
   "Enter Company Size": "Enter Company Size",
   "Company Size": "Company Size",
   "Company logo": "Company logo",
-  "Please enter your company logo": "Please enter your company logo"
+  "Please enter your company logo": "Please enter your company logo",
+  "Page Not Found": "Page Not Found",
+  "We Apologize For The Inconvenience": "We Apologize For The Inconvenience",
+  "Reload Again": "Reload Again"
 }
