--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -138,5 +138,8 @@
   "Enter Company Size": "Введите размер компании",
   "Company Size": "Размер компании",
   "Company logo": "Логотип компании",
-  "Please enter your company logo": "Пожалуйста, введите логотип вашей компании"
+  "Please enter your company logo": "Пожалуйста, введите логотип вашей компании",
+  "Page Not Found": "Страница не найдена",
+  "We Apologize For The Inconvenience": "Приносим извинения за причиненные неудобства.",
+  "Reload Again": "Перезагрузить снова"
 }
