--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -141,5 +141,9 @@
   "Please enter your company logo": "يُرجى إدخال شعار شركتك",
   "Page Not Found": "لم يتم العثور على الصفحة",
   "We Apologize For The Inconvenience": "نحن نعتذر عن الإزعاج",
-  "Reload Again": "إعادة التحميل مرة أخرى"
+  "Reload Again": "إعادة التحميل مرة أخرى",
+  "Images": "الصور",
+  "Name": "الأسم",
+  "The Price": "السعر",
+  "Create Ad": "إنشاء إعلان"
 }
