--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -141,5 +141,9 @@
   "Please enter your company logo": "Please enter your company logo",
   "Page Not Found": "Page Not Found",
   "We Apologize For The Inconvenience": "We Apologize For The Inconvenience",
-  "Reload Again": "Reload Again"
+  "Reload Again": "Reload Again",
+  "Images": "Images",
+  "Name": "Name",
+  "The Price": "The Price",
+  "Create Ad": "Create Ad"
 }
