--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -141,5 +141,9 @@
   "Please enter your company logo": "Пожалуйста, введите логотип вашей компании",
   "Page Not Found": "Страница не найдена",
   "We Apologize For The Inconvenience": "Приносим извинения за причиненные неудобства.",
-  "Reload Again": "Перезагрузить снова"
+  "Reload Again": "Перезагрузить снова",
+  "Images": "Изображения",
+  "Name": "Имя",
+  "The Price": "Цена",
+  "Create Ad": "Создать объявление"
 }
