--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -150,5 +150,7 @@
   "Settings": "Settings",
   "Light Mode": "Light Mode",
   "Country": "Country",
-  "Language": "Language"
+  "Language": "Language",
+  "Logout": "Logout",
+  "If this is due to a problem, please contact us immediately": "If this is due to a problem, please contact us immediately"
 }
