--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -150,5 +150,7 @@
   "Settings": "Настройки",
   "Light Mode": "Режим света",
   "Country": "Страна",
-  "Language": "Язык"
+  "Language": "Язык",
+  "Logout": "Выйти",
+  "If this is due to a problem, please contact us immediately": "Если это связано с какой-либо проблемой, пожалуйста, свяжитесь с нами немедленно."
 }
