--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -153,5 +153,18 @@
   "Ad Title": "عنوان الإعلان",
   "Ad Description": "وصف الإعلان",
   "Explore Sub Categories": "استكشف الفئات الفرعية",
-  "Explore Sub Inside The Sub Categories": "استكشف الفرعي داخل الفئات الفرعية"
+  "Explore Sub Inside The Sub Categories": "استكشف الفرعي داخل الفئات الفرعية",
+  "Notifications": "الاشعارات",
+  "Settings": "الاعدادات",
+  "Light Mode": "الوضع النهاري",
+  "Country": "الدولة",
+  "Language": "اللغة",
+  "Logout": "تسجيل خروج",
+  "If this is due to a problem, please contact us immediately": "إذا كان هذا بسبب مشكلة، يرجى الاتصال بنا على الفور",
+  "Contact": "تواصل",
+  "Yes": "نعم",
+  "Offers": "العروض",
+  "Offer Details": "تفاصيل العرض",
+  "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "بعد إتمامك لـ 3 صفقات، سنخبرك بهديتك. ماذا تنتظر؟",
+  "Claim Offer": "المطالبة بالعرض"
 }
