--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -153,5 +153,18 @@
   "Ad Title": "Ad Title",
   "Ad Description": "Ad Description",
   "Explore Sub Categories": "Explore Sub Categories",
-  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories"
+  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories",
+  "Notifications": "Notifications",
+  "Settings": "Settings",
+  "Light Mode": "Light Mode",
+  "Country": "Country",
+  "Language": "Language",
+  "Logout": "Logout",
+  "If this is due to a problem, please contact us immediately": "If this is due to a problem, please contact us immediately",
+  "Contact": "Contact",
+  "Yes": "Yes",
+  "Offers": "Offers",
+  "Offer Details": "Offer Details",
+  "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "After you complete 3 deals, we will notify you of your gift. What are you waiting for?",
+  "Claim Offer": "Claim Offer"
 }
