--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -153,5 +153,18 @@
   "Ad Title": "Название объявления",
   "Ad Description": "Описание объявления",
   "Explore Sub Categories": "Просмотреть подкатегории",
-  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories"
+  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories",
+  "Notifications": "Уведомления",
+  "Settings": "Настройки",
+  "Light Mode": "Режим света",
+  "Country": "Страна",
+  "Language": "Язык",
+  "Logout": "Выйти",
+  "If this is due to a problem, please contact us immediately": "Если это связано с какой-либо проблемой, пожалуйста, свяжитесь с нами немедленно.",
+  "Contact": "Контакт",
+  "Yes": "Да",
+  "Offers": "Предложения",
+  "Offer Details": "Подробности предложения",
+  "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "После того, как вы выполните 3 сделки, мы сообщим вам о вашем подарке. Чего вы ждете?",
+  "Claim Offer": "Предложение о праве требования"
 }
