--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -166,5 +166,6 @@
   "Offers": "العروض",
   "Offer Details": "تفاصيل العرض",
   "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "بعد إتمامك لـ 3 صفقات، سنخبرك بهديتك. ماذا تنتظر؟",
-  "Claim Offer": "المطالبة بالعرض"
+  "Claim Offer": "المطالبة بالعرض",
+  "FAQ": "التعليمات"
 }
