--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -166,5 +166,6 @@
   "Offers": "Offers",
   "Offer Details": "Offer Details",
   "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "After you complete 3 deals, we will notify you of your gift. What are you waiting for?",
-  "Claim Offer": "Claim Offer"
+  "Claim Offer": "Claim Offer",
+  "FAQ": "FAQ"
 }
