--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -166,5 +166,6 @@
   "Offers": "Предложения",
   "Offer Details": "Подробности предложения",
   "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "После того, как вы выполните 3 сделки, мы сообщим вам о вашем подарке. Чего вы ждете?",
-  "Claim Offer": "Предложение о праве требования"
+  "Claim Offer": "Предложение о праве требования",
+  "FAQ": "Часто задаваемые вопросы"
 }
