--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -167,5 +167,12 @@
   "Offer Details": "تفاصيل العرض",
   "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "بعد إتمامك لـ 3 صفقات، سنخبرك بهديتك. ماذا تنتظر؟",
   "Claim Offer": "المطالبة بالعرض",
-  "FAQ": "التعليمات"
+  "FAQ": "التعليمات",
+  "About us": "معلومات عنا",
+  "Privacy of use": "خصوصية الاستخدام",
+  "Terms and Conditions": "الشروط والأحكام",
+  "Facebook": "فيسبوك",
+  "Instagram": "انستجرام",
+  "Twitter": "تويتر",
+  "Linkedin": "لينكد ان"
 }
