--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -167,5 +167,12 @@
   "Offer Details": "Offer Details",
   "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "After you complete 3 deals, we will notify you of your gift. What are you waiting for?",
   "Claim Offer": "Claim Offer",
-  "FAQ": "FAQ"
+  "FAQ": "FAQ",
+  "About us": "About us",
+  "Privacy of use": "Privacy of use",
+  "Terms and Conditions": "Terms and Conditions",
+  "Facebook": "Facebook",
+  "Instagram": "Instagram",
+  "Twitter": "Twitter",
+  "Linkedin": "Linkedin"
 }
