--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -167,5 +167,12 @@
   "Offer Details": "Подробности предложения",
   "After you complete 3 deals, we will notify you of your gift. What are you waiting for?": "После того, как вы выполните 3 сделки, мы сообщим вам о вашем подарке. Чего вы ждете?",
   "Claim Offer": "Предложение о праве требования",
-  "FAQ": "Часто задаваемые вопросы"
+  "FAQ": "Часто задаваемые вопросы",
+  "About us": "О нас",
+  "Privacy of use": "Конфиденциальность использования",
+  "Terms and Conditions": "Условия и положения",
+  "Facebook": "Фейсбук",
+  "Instagram": "Инстаграм",
+  "Twitter": "Твиттер",
+  "Linkedin": "Линкедин"
 }
