--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -174,5 +174,15 @@
   "Facebook": "Facebook",
   "Instagram": "Instagram",
   "Twitter": "Twitter",
-  "Linkedin": "Linkedin"
+  "Linkedin": "Linkedin",
+  "ID Verification": "ID Verification",
+  "Tap to upload or take a photo": "Tap to upload or take a photo",
+  "Important guidelines for your identity:": "Important guidelines for your identity:",
+  "Government-issued": "Government-issued.",
+  "Original full-size, unedited documents": "Original full-size, unedited documents.",
+  "Documents against a single-color background": "Documents against a single-color background.",
+  "Readable, well-lit, colored images.": "Readable, well-lit, colored images.",
+  "No black and white images.": "No black and white images.",
+  "No edited or expired documents": "No edited or expired documents",
+  "Self Photo": "Self Photo"
 }
