--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -153,5 +153,18 @@
   "Ad Title": "عنوان الإعلان",
   "Ad Description": "وصف الإعلان",
   "Explore Sub Categories": "استكشف الفئات الفرعية",
-  "Explore Sub Inside The Sub Categories": "استكشف الفرعي داخل الفئات الفرعية"
+  "Explore Sub Inside The Sub Categories": "استكشف الفرعي داخل الفئات الفرعية",
+  "Images are required!!!": " الصور مطلوبة!!!",
+  "Please choose your prefered contact": "يُرجى اختيار جهة الاتصال المفضلة لديك",
+  "Select your conditions": "حدد شروطك",
+  "Ad": "إعلان",
+  "Import & Export": "الاستيراد والتصدير",
+  "Create Job": "إنشاء وظيفة",
+  "Standard": "العادي",
+  "ads for free/ month": "إعلانات مجانية / شهريا",
+  "Promoted": "تمت ترقيته",
+  "Left": "متبقي",
+  "Use promoted ads to reach more customers": "استخدم الإعلانات الترويجية للوصول إلى المزيد من العملاء",
+  "Car": "سيارة",
+  "Properties": "عقارات"
 }
