--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -153,5 +153,18 @@
   "Ad Title": "Ad Title",
   "Ad Description": "Ad Description",
   "Explore Sub Categories": "Explore Sub Categories",
-  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories"
+  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories",
+  "Images are required!!!": "Images are required!!!",
+  "Please choose your prefered contact": "Please choose your prefered contact",
+  "Select your conditions": "Select your conditions",
+  "Ad": "Ad",
+  "Import & Export": "Import & Export",
+  "Create Job": "Create Job",
+  "Standard": "Standard",
+  "ads for free/ month": "ads for free/ month",
+  "Promoted": "Promoted",
+  "Left": "Left",
+  "Use promoted ads to reach more customers": "Use promoted ads to reach more customers",
+  "Car": "Car",
+  "Properties": "Properties"
 }
