--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -153,5 +153,18 @@
   "Ad Title": "Название объявления",
   "Ad Description": "Описание объявления",
   "Explore Sub Categories": "Просмотреть подкатегории",
-  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories"
+  "Explore Sub Inside The Sub Categories": "Explore Sub Inside The Sub Categories",
+  "Images are required!!!": " Изображения обязательны!!!",
+  "Please choose your prefered contact": "пожалуйста, выберите желаемый контакт",
+  "Select your conditions": "Выберите ваши условия",
+  "Ad": "Объявление",
+  "Import & Export": "Импорт и экспорт",
+  "Create Job": "Создать работу",
+  "Standard": "Стандарт",
+  "ads for free/ month": "объявления бесплатно/месяц",
+  "Promoted": "Повышен",
+  "Left": "Левый",
+  "Use promoted ads to reach more customers": "Используйте рекламные объявления, чтобы охватить больше клиентов",
+  "Car": "Машина",
+  "Properties": "Характеристики"
 }
