--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -166,5 +166,15 @@
   "Left": "متبقي",
   "Use promoted ads to reach more customers": "استخدم الإعلانات الترويجية للوصول إلى المزيد من العملاء",
   "Car": "سيارة",
-  "Properties": "عقارات"
+  "Properties": "عقارات",
+  "Privacy of use": "خصوصية الاستخدام",
+  "About us": "معلومات عنا",
+  "Facebook": "فيسبوك",
+  "Faqs": "الأسئلة الشائعة",
+  "if This Is Due To A Problem": "إذا كان هذا بسبب مشكلة",
+  "Contact": "اتصال",
+  "Yes": "نعم",
+  "Offer Details": "تفاصيل العرض",
+  "Offers": "العروض",
+  "Claim Offer": "المطالبة بالعرض"
 }
