--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -166,5 +166,15 @@
   "Left": "Left",
   "Use promoted ads to reach more customers": "Use promoted ads to reach more customers",
   "Car": "Car",
-  "Properties": "Properties"
+  "Properties": "Properties",
+  "Privacy of use": "Privacy of use",
+  "About us": "About us",
+  "Facebook": "Facebook",
+  "Faqs": "Faqs",
+  "if This Is Due To A Problem": "If This Is Due To A Problem",
+  "Contact": "Contact",
+  "Yes": "Yes",
+  "Offer Details": "Offer Details",
+  "Offers": "Offers",
+  "Claim Offer": "Claim Offer"
 }
