--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -166,5 +166,15 @@
   "Left": "Левый",
   "Use promoted ads to reach more customers": "Используйте рекламные объявления, чтобы охватить больше клиентов",
   "Car": "Машина",
-  "Properties": "Характеристики"
+  "Properties": "Характеристики",
+  "Privacy of use": "Конфиденциальность использования",
+  "About us": "О нас",
+  "Facebook": "Фейсбук",
+  "Faqs": "Часто задаваемые вопросы",
+  "if This Is Due To A Problem": "если это связано с проблемой",
+  "Contact": "Контакт",
+  "Yes": "Да",
+  "Offer Details": "Подробности предложения",
+  "Offers": "Предложения",
+  "Claim Offer": "Предложение о праве требования"
 }
