--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -176,5 +176,10 @@
   "Yes": "نعم",
   "Offer Details": "تفاصيل العرض",
   "Offers": "العروض",
-  "Claim Offer": "المطالبة بالعرض"
+  "Claim Offer": "المطالبة بالعرض",
+  "Subscribe": "يشترك",
+  "ads standard": "إعلانات اعتياديه",
+  "valid": "صالح",
+  "days": "يوم",
+  "What’s included": "ما هو المشمول"
 }
