--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -176,5 +176,10 @@
   "Yes": "Yes",
   "Offer Details": "Offer Details",
   "Offers": "Offers",
-  "Claim Offer": "Claim Offer"
+  "Claim Offer": "Claim Offer",
+  "Subscribe": "Subscribe",
+  "ads standard": "ads standard",
+  "valid": "valid",
+  "days": "days",
+  "What’s included": "What’s included"
 }
