--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -176,5 +176,10 @@
   "Yes": "Да",
   "Offer Details": "Подробности предложения",
   "Offers": "Предложения",
-  "Claim Offer": "Предложение о праве требования"
+  "Claim Offer": "Предложение о праве требования",
+  "Subscribe": "Подписаться",
+  "ads standard": "стандарт объявлений",
+  "valid": "действительный",
+  "days": "дней",
+  "What’s included": "Что включено"
 }
