add location ui

--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -184,5 +184,20 @@
   "Readable, well-lit, colored images.": "Читаемые, хорошо освещенные, цветные изображения",
   "No black and white images.": "Никаких черно-белых изображений.",
   "No edited or expired documents": "Никаких отредактированных или просроченных документов.",
-  "Self Photo": "Фото себя"
+  "Self Photo": "Фото себя",
+  "Avoid wearing hats": "Избегайте ношения шляп.",
+  "Avoid wearing glasses": "Избегайте ношения очков.",
+  "Avoid using filters": "Избегайте использования фильтров",
+  "Use enough lightings": "Используйте достаточное количество освещения",
+  "Your ID Proof has been submitted": "Ваше удостоверение личности отправлено 👍",
+  "We will review and let you know within 48 hours working days.": "Мы рассмотрим ваш запрос и сообщим вам в течение 48 часов в рабочие дни.",
+  "Done": "Сделанный",
+  "Location": "Расположение",
+  "Save": "Сохранять",
+  "Location Name": "Название местоположения",
+  "Add location name like (Home, work, branch)": "Добавьте название местоположения, например (дом, работа, филиал)",
+  "Choose City": "Выберите город",
+  "Add Location": "Добавить местоположение",
+  "Describe your location": "Опишите ваше местоположение",
+  "Edit profile": "Редактировать профиль"
 }
