--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -184,5 +184,20 @@
   "Readable, well-lit, colored images.": "صور ملونة وقابلة للقراءة ومضاءة جيدًا",
   "No black and white images.": "لا توجد صور بالأبيض والأسود.",
   "No edited or expired documents": "لا يوجد مستندات محررة أو منتهية الصلاحية.",
-  "Self Photo": "صورة ذاتية"
+  "Self Photo": "صورة ذاتية",
+  "Avoid wearing hats": "تجنب ارتداء القبعات",
+  "Avoid wearing glasses": "تجنب ارتداء النظارات",
+  "Avoid using filters": "تجنب استخدام الفلترات",
+  "Use enough lightings": "استخدم إضاءات كافية",
+  "Your ID Proof has been submitted": "لقد تم تقديم إثبات هويتك 👍",
+  "We will review and let you know within 48 hours working days.": "سنقوم بالمراجعة وإعلامك خلال 48 ساعة عمل.",
+  "Done": "تم",
+  "Location": "موقع",
+  "Save": "حفظ",
+  "Location Name": "اسم الموقع",
+  "Add location name like (Home, work, branch)": "أضف اسم الموقع مثل (المنزل، العمل، الفرع)",
+  "Choose City": "اختر مدينة",
+  "Add Location": "اضف الموقع",
+  "Describe your location": "قم بوصف موقعك",
+  "Edit profile": "تعديل الحساب"
 }
