--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -184,5 +184,20 @@
   "Readable, well-lit, colored images.": "Readable, well-lit, colored images.",
   "No black and white images.": "No black and white images.",
   "No edited or expired documents": "No edited or expired documents",
-  "Self Photo": "Self Photo"
+  "Self Photo": "Self Photo",
+  "Avoid wearing hats": "Avoid wearing hats",
+  "Avoid wearing glasses": "Avoid wearing glasses",
+  "Avoid using filters": "Avoid using filters",
+  "Use enough lightings": "Use enough lightings",
+  "Your ID Proof has been submitted": "Your ID Proof has been submitted  👍",
+  "We will review and let you know within 48 hours working days.": "We will review and let you know within 48 hours working days.",
+  "Done": "Done",
+  "Location": "Location",
+  "Save": "Save",
+  "Location Name": "Location Name",
+  "Add location name like (Home, work, branch)": "Add location name like (Home, work, branch)",
+  "Choose City": "Choose City",
+  "Add Location": "Add Location",
+  "Describe your location": "Describe your location",
+  "Edit profile": "Edit profile"
 }
