--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -215,5 +215,11 @@
   "Delete": "مسح",
   "Delete Location": "حذف الموقع",
   "Do you really want to delete this location?": "هل تريد حقًا حذف هذا الموقع؟",
-  "No": "لا"
+  "No": "لا",
+  "Edit work experience": "تعديل تجربة العمل",
+  "This is my position now": "هذه وظيفتي الان",
+  "Add work experience": "أضف خبرة العمل",
+  "Remove": "ازالة",
+  "Remove Work Experience": "إزالة الخبرة العملية؟",
+  "Are you sure you want to delete this work experience?": "هل أنت متأكد أنك تريد حذف تجربة العمل هذه؟"
 }
