--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -217,5 +217,11 @@
   "Delete": "Delete",
   "Delete Location": "Delete Location",
   "Do you really want to delete this location?": "Do you really want to delete this location?",
-  "No": "No"
+  "No": "No",
+  "Edit work experience": "Edit work experience",
+  "This is my position now": "This is my position now",
+  "Add work experience": "Add work experience",
+  "Remove": "Remove",
+  "Remove Work Experience": "Remove Work Experience ?",
+  "Are you sure you want to delete this work experience?": "Are you sure you want to delete this work experience?"
 }
